--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,22 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">0</td><td class="num">18,823</td><td></td><td></td></tr>
+<tr><th colspan="8">Failed suite [Suite]</th></tr>
+<tr><td><a href="#t0">Test(failed)</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">25,199</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">TestScripts.BaseSuiteFile</td><td><a href="#m0">beforeMethod</a></td><td rowspan="1">1596442306278</td><td rowspan="1">18605</td></tr><tr><th colspan="4">Test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="4">TestScripts.BaseSuiteFile</td><td><a href="#m1">afterClass</a></td><td rowspan="1">1596442324914</td><td rowspan="1">-1596442324914</td></tr><tr class="skippedeven"><td><a href="#m2">afterMethod</a></td><td rowspan="1">1596442324910</td><td rowspan="1">-1596442324910</td></tr><tr class="skippedeven"><td><a href="#m3">afterSuite</a></td><td rowspan="1">1596442324966</td><td rowspan="1">-1596442324966</td></tr><tr class="skippedeven"><td><a href="#m4">afterTest</a></td><td rowspan="1">1596442324919</td><td rowspan="1">-1596442324919</td></tr><tr><th colspan="4">Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">TestScripts.BaseSuiteFile</td><td><a href="#m5">CaseId_07_01_GilletteSignin_Raja</a></td><td rowspan="1">1596442324900</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Failed suite [Suite]</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test(failed) &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">TestScripts.BaseSuiteFile</td><td><a href="#m0">afterSuite</a></td><td rowspan="1">1597241788290</td><td rowspan="1">4</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">TestScripts.BaseSuiteFile#beforeMethod</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>optionalvalue</td><td>public void TestScripts.BaseSuiteFile.CaseId_07_01_GilletteSignin_Raja() throws java.io.IOException,org.json.simple.parser.ParseException</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.NullPointerException
-	at TestScripts.BaseSuiteFile.beforeMethod(BaseSuiteFile.java:176)
-	at java.util.ArrayList.forEach(Unknown Source)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestScripts.BaseSuiteFile#afterClass</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TestScripts.BaseSuiteFile#afterMethod</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">TestScripts.BaseSuiteFile#afterSuite</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">TestScripts.BaseSuiteFile#afterTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">TestScripts.BaseSuiteFile#CaseId_07_01_GilletteSignin_Raja</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at TestScripts.BaseSuiteFile.beforeMethod(BaseSuiteFile.java:176)
-	at java.util.ArrayList.forEach(Unknown Source)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test(failed)</h2><h3 id="m0">TestScripts.BaseSuiteFile#afterSuite</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at TestScripts.BaseSuiteFile.afterSuite(BaseSuiteFile.java:329)
+... Removed 19 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
