--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,22 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9fd9b">  <td>20/08/03 13:41:46</td>   <td>0</td> <td title="&gt;&gt;BaseSuiteFile.beforeSuite()[pri:0, instance:TestScripts.BaseSuiteFile@1877ab81]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@246550802</td>   <td></td> </tr>
-<tr bgcolor="a9fd9b">  <td>20/08/03 13:41:46</td>   <td>16</td> <td>&nbsp;</td><td title="&gt;&gt;BaseSuiteFile.beforeTest()[pri:0, instance:TestScripts.BaseSuiteFile@1877ab81]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@246550802</td>   <td></td> </tr>
-<tr bgcolor="a9fd9b">  <td>20/08/03 13:41:46</td>   <td>187</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseSuiteFile.setup()[pri:0, instance:TestScripts.BaseSuiteFile@1877ab81]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@246550802</td>   <td></td> </tr>
-<tr bgcolor="a9fd9b">  <td>20/08/03 13:41:46</td>   <td>203</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseSuiteFile.beforeMethod(java.lang.String, java.lang.reflect.Method)[pri:0, instance:TestScripts.BaseSuiteFile@1877ab81]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@246550802</td>   <td></td> </tr>
-<tr bgcolor="a9fd9b">  <td>20/08/03 13:42:04</td>   <td>18815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseSuiteFile.CaseId_07_01_GilletteSignin_Raja()[pri:0, instance:TestScripts.BaseSuiteFile@1877ab81]">CaseId_07_01_GilletteSignin_Raja</td> 
-  <td>main@246550802</td>   <td></td> </tr>
-<tr bgcolor="a9fd9b">  <td>20/08/03 13:42:04</td>   <td>18826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseSuiteFile.afterMethod(org.testng.ITestResult)[pri:0, instance:TestScripts.BaseSuiteFile@1877ab81]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a9fd9b">  <td>20/08/03 13:42:04</td>   <td>18831</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseSuiteFile.afterClass()[pri:0, instance:TestScripts.BaseSuiteFile@1877ab81]">&lt;&lt;afterClass</td> 
+<tr bgcolor="a9fd9b">  <td>20/08/07 19:24:24</td>   <td>0</td> <td title="&gt;&gt;BaseSuiteFile.beforeSuite()[pri:0, instance:TestScripts.BaseSuiteFile@4232c52b]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1134612201</td>   <td></td> </tr>
+<tr bgcolor="a9fd9b">  <td>20/08/07 19:24:24</td>   <td>10</td> <td>&nbsp;</td><td title="&gt;&gt;BaseSuiteFile.beforeTest()[pri:0, instance:TestScripts.BaseSuiteFile@4232c52b]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1134612201</td>   <td></td> </tr>
+<tr bgcolor="a9fd9b">  <td>20/08/07 19:24:24</td>   <td>113</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseSuiteFile.setup()[pri:0, instance:TestScripts.BaseSuiteFile@4232c52b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-1@1463592445</td>   <td></td> </tr>
+<tr bgcolor="a9fd9b">  <td>20/08/07 19:24:24</td>   <td>121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseSuiteFile.Case_04_Frames_Raja()[pri:2, instance:TestScripts.BaseSuiteFile@4232c52b]">Case_04_Frames_Raja</td> 
+  <td>TestNG-test=Test-2@1612827819</td>   <td></td> </tr>
+<tr bgcolor="a9fd9b">  <td>20/08/07 19:24:24</td>   <td>121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseSuiteFile.Caseid_02_05_AlertsPage_Raja()[pri:1, instance:TestScripts.BaseSuiteFile@4232c52b]">Caseid_02_05_AlertsPage_Raja</td> 
+  <td>TestNG-test=Test-1@1463592445</td>   <td></td> </tr>
+<tr bgcolor="a9fd9b">  <td>20/08/07 19:24:46</td>   <td>21697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseSuiteFile.afterMethod(org.testng.ITestResult)[pri:0, instance:TestScripts.BaseSuiteFile@4232c52b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1463592445</td>   <td></td> </tr>
+<tr bgcolor="a9fd9b">  <td>20/08/07 19:24:49</td>   <td>24687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseSuiteFile.afterMethod(org.testng.ITestResult)[pri:0, instance:TestScripts.BaseSuiteFile@4232c52b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1463592445</td>   <td></td> </tr>
+<tr bgcolor="a9fd9b">  <td>20/08/07 19:24:49</td>   <td>24688</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseSuiteFile.afterClass()[pri:0, instance:TestScripts.BaseSuiteFile@4232c52b]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a9fd9b">  <td>20/08/03 13:42:04</td>   <td>18835</td> <td>&nbsp;</td><td title="&lt;&lt;BaseSuiteFile.afterTest()[pri:0, instance:TestScripts.BaseSuiteFile@1877ab81]">&lt;&lt;afterTest</td> 
+<tr bgcolor="a9fd9b">  <td>20/08/07 19:24:49</td>   <td>24689</td> <td>&nbsp;</td><td title="&lt;&lt;BaseSuiteFile.afterTest()[pri:0, instance:TestScripts.BaseSuiteFile@4232c52b]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a9fd9b">  <td>20/08/03 13:42:04</td>   <td>18882</td> <td title="&lt;&lt;BaseSuiteFile.afterSuite()[pri:0, instance:TestScripts.BaseSuiteFile@1877ab81]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="a9fd9b">  <td>20/08/07 19:24:49</td>   <td>24710</td> <td title="&lt;&lt;BaseSuiteFile.afterSuite()[pri:0, instance:TestScripts.BaseSuiteFile@4232c52b]">&lt;&lt;afterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
